test/sema/inference/type_inference_unary_error.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn main(): void { 
  mut s;

  // CHECK: [[# @LINE + 1 ]]:4: error: type of operand to unary operator is unknown
  !s;
}

// CHECK-NOT: {{.*error.*}}
